[package]
name = "retaker"
version = "0.1.0"
edition = "2021"

rust-version = "1.56"
authors = ["sugmaboy<jjmartinodev@outlook.com>"]
readme = "README.md"
license-file = "LICENSE"
description = "a simple ecs implementation"
repository = "https://github.com/jjmartinodev/grasp"
keywords = ["ecs","simple"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anylist = "0.2.2"
