[package]
name = "retaker"
version = "0.2.4"
edition = "2021"

rust-version = "1.56"
authors = ["sugmaboy<jjmartinodev@outlook.com>"]
readme = "README.md"
license-file = "LICENSE"
description = "a simple ecs implementation"
repository = "https://github.com/jjmartinodev/retaker"
keywords = ["ecs","simple"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.12.3"
varset = "0.1.1"
