[package]
name = "retaker"
version = "0.7.6"
edition = "2021"

rust-version = "1.56"
authors = ["sugmaboy<jjmartinodev@outlook.com>"]
readme = "README.md"
license-file = "LICENSE"
description = "a simple ecs implementation"
repository = "https://github.com/jjmartinodev/retaker"
keywords = ["ecs","simple"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.12.3"
parking_lot = "0.12.3"
rayon = "1.6.1"

[dev-dependencies]
macroquad = "0.4.13"

[profile.dev.package."*"]
opt-level = 3
